force-app/main/default/objects/Application_Job__c/Application_Job__c.object-meta.xml
<CustomObject>
    <label>Application Job</label>
    <nameField>
        <displayFormat>JOB-{000000}</displayFormat>
        <label>Application Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>