force-app/main/default/objects/Application_Job__c/fields/Can_Be_Restarted__c.field-meta.xml
<CustomField>
    <fullName>Can_Be_Restarted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Restarted</label>
    <type>Checkbox</type>
</CustomField>