force-app/main/default/objects/Application_Job__c/fields/Execution_Mode__c.field-meta.xml
<CustomField>
    <fullName>Execution_Mode__c</fullName>
    <label>Execution Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>