force-app/main/default/objects/Application_Job__c/fields/External_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Job_Id__c</fullName>
    <label>External Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>