force-app/main/default/objects/Application_Job__c/fields/Job_Key__c.field-meta.xml
<CustomField>
    <fullName>Job_Key__c</fullName>
    <label>Job Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>