force-app/main/default/objects/Application_Job__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <label>Job Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>