force-app/main/default/objects/Application_Job__c/fields/Source_Step_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Step_Key__c</fullName>
    <label>Source Step Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>